--- a/config/yolov5/ID/yolov5x_v4.cfg
+++ b/config/yolov5/ID/yolov5x_v4.cfg
@@ -55,7 +55,7 @@ activation=mish
 # CSPBlock layer  C3 x 1
 [convolutional]
 batch_normalize=1
-filters=80
+filters=160
 size=1
 stride=1
 pad=1
@@ -63,14 +63,10 @@ activation=mish
 
 # right
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=80
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x4
 [convolutional]
 batch_normalize=1
@@ -142,9 +138,14 @@ from=-3
 activation=linear
 # repeat  residual module x4 end
 
+# left
+[route]
+layers=-14
+groups=2
+group_id=0
 
 [route]
-layers=-1,-15
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -168,7 +169,7 @@ activation=mish
 # CSPBlock  layer  p-8
 [convolutional]
 batch_normalize=1
-filters=160
+filters=320
 size=1
 stride=1
 pad=1
@@ -176,14 +177,10 @@ activation=mish
 
 # right
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=160
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x12
 [convolutional]
 batch_normalize=1
@@ -392,7 +389,12 @@ activation=linear
 # repeat  residual module x12 end
 
 [route]
-layers=-1,-39
+layers=-38
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -414,7 +416,7 @@ activation=mish
 # CSPBlock
 [convolutional]
 batch_normalize=1
-filters=320
+filters=640
 size=1
 stride=1
 pad=1
@@ -422,14 +424,10 @@ activation=mish
 
 # right
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x12
 [convolutional]
 batch_normalize=1
@@ -637,8 +635,14 @@ from=-3
 activation=linear
 # repeat  residual module x12 end
 
+# right
 [route]
-layers=-1,-39
+layers=-38
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -695,7 +699,7 @@ activation=mish
 # CSPBlock  layer
 [convolutional]
 batch_normalize=1
-filters=640
+filters=1280
 size=1
 stride=1
 pad=1
@@ -703,14 +707,10 @@ activation=mish
 
 # right
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=640
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat   module  x4
 [convolutional]
 batch_normalize=1
@@ -770,8 +770,14 @@ pad=1
 activation=mish
 # repeat   module x4 end
 
+#left
 [route]
-layers=-1,-11
+layers=-10
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -801,21 +807,17 @@ layers= 103,-1
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=320
+filters=640
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x4
 [convolutional]
 batch_normalize=1
@@ -876,7 +878,12 @@ activation=mish
 # repeat  residual module x4 end
 
 [route]
-layers=-1,-11
+layers=-10
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -905,21 +912,17 @@ layers=61,-1
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=160
+filters=320
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=160
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  module  x4
 [convolutional]
 batch_normalize=1
@@ -979,9 +982,13 @@ pad=1
 activation=mish
 # repeat  module x4 end
 
+[route]
+layers=-6
+groups=2
+group_id=0
 
 [route]
-layers=-1,-7
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -1035,21 +1042,17 @@ layers=-1, 142
 # NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=320
+filters=640
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x4
 [convolutional]
 batch_normalize=1
@@ -1110,7 +1113,12 @@ activation=mish
 # repeat  residual module x4 end
 
 [route]
-layers=-1,-7
+layers=-6
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -1164,21 +1172,17 @@ layers=-1,126
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=640
+filters=1280
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=640
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module x4
 [convolutional]
 batch_normalize=1
@@ -1239,7 +1243,12 @@ activation=mish
 # repeat  residual module x4 end
 
 [route]
-layers=-1,-7
+layers=-6
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
