--- a/config/yolov5/cspp/yolov5l_cspp_NoID.cfg
+++ b/config/yolov5/cspp/yolov5l_cspp_NoID.cfg
@@ -18,9 +18,9 @@ hue=.1
 # learning_rate=0.001
 learning_rate=0.00261
 burn_in=1000
-max_batches=50000
+max_batches=30000
 policy=steps
-steps=25000,40000
+steps=15000,25000
 scales=.1,.1
 
 #cutmix=1
@@ -29,7 +29,7 @@ mosaic=1
 # 0-P1/2
 [convolutional]
 batch_normalize=1
-filters=48
+filters=24
 groups=3
 size=3
 stride=2
@@ -37,7 +37,7 @@ pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=3
 stride=1
 pad=1
@@ -46,7 +46,7 @@ activation=mish
 # Downsample  # 1-P2/4
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=2
 pad=1
@@ -55,7 +55,7 @@ activation=mish
 # CSPBlock layer  C3 x 1
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=1
 stride=1
 pad=1
@@ -66,22 +66,22 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  residual module  x4
+# repeat  residual module  x3
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=3
 stride=1
 pad=1
@@ -91,14 +91,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=3
 stride=1
 pad=1
@@ -108,14 +108,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=80
+filters=64
 size=3
 stride=1
 pad=1
@@ -123,32 +123,14 @@ activation=mish
 [shortcut]
 from=-3
 activation=linear
-[convolutional]
-batch_normalize=1
-filters=80
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=80
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-# repeat  residual module x4 end
-
+# repeat  residual module x3 end
 
 [route]
-layers=-1,-15
+layers=-1,-12
 
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
@@ -158,7 +140,7 @@ activation=mish
 # Downsample  layer # 11-P3/8
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=2
 pad=1
@@ -168,7 +150,7 @@ activation=mish
 # CSPBlock  layer  p-8
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
@@ -179,22 +161,22 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  residual module  x12
+# repeat  residual module  x9
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -204,14 +186,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -221,14 +203,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -238,14 +220,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -255,14 +237,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -272,14 +254,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -289,14 +271,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -306,14 +288,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -323,14 +305,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
@@ -338,65 +320,14 @@ activation=mish
 [shortcut]
 from=-3
 activation=linear
-[convolutional]
-batch_normalize=1
-filters=160
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=160
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=160
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=160
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=160
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=160
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-# repeat  residual module x12 end
+# repeat  residual module x9 end
 
 [route]
-layers=-1,-39
+layers=-1,-30
 
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
@@ -405,7 +336,7 @@ activation=mish
 # Downsample  # P4/16
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=2
 pad=1
@@ -414,7 +345,7 @@ activation=mish
 # CSPBlock
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
@@ -425,22 +356,22 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  residual module  x12
+# repeat  residual module  x9
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -450,14 +381,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -467,14 +398,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -484,14 +415,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -501,14 +432,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -518,14 +449,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -535,14 +466,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -552,14 +483,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -569,14 +500,14 @@ from=-3
 activation=linear
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
@@ -584,65 +515,14 @@ activation=mish
 [shortcut]
 from=-3
 activation=linear
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=320
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=320
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=320
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-# repeat  residual module x12 end
+# repeat  residual module x9 end
 
 [route]
-layers=-1,-39
+layers=-1,-30
 
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
@@ -652,16 +532,27 @@ activation=mish
 # Downsample  # P5/32
 [convolutional]
 batch_normalize=1
-filters=1280
+filters=1024
 size=3
 stride=2
 pad=1
 activation=mish
 
 
+######################## CSPSPP ######################
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+
+[route]
+layers=-2
+[convolutional]
+batch_normalize=1
+filters=512
 size=1
 stride=1
 pad=1
@@ -680,22 +571,25 @@ layers=-4
 [maxpool]
 stride=1
 size=13
+### END SPP ###
+
 [route]
-layers=-1,-3,-5,-6
-### End SPP ###
+layers=-1,-3,-5,-8
+
 [convolutional]
 batch_normalize=1
-filters=1280
+filters=1024
 size=1
 stride=1
 pad=1
 activation=mish
+### End CSPSPP ###
 
 
 # CSPBlock  layer
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
@@ -706,86 +600,72 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat   module  x4
+# repeat   module  x1
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=1
 pad=1
 activation=mish
-[convolutional]
-batch_normalize=1
-filters=640
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=640
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat   module x4 end
+# repeat   module x3 end
 
 [route]
-layers=-1,-11
+layers=-1,-9
 
 [convolutional]
 batch_normalize=1
-filters=1280
+filters=1024
 size=1
 stride=1
 pad=1
 activation=mish
 
-########################################################## backbone end at layer_id : 125
+########################################################## backbone end at layer_id : 102
 
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
@@ -796,12 +676,12 @@ activation=mish
 stride=2
 
 [route] 
-layers= 103,-1
+layers= 82,-1
 
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
@@ -811,76 +691,62 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  residual module  x4
+# repeat  residual module  x3
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
 activation=mish
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=320
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x4 end
+# repeat  residual module x3 end
 
 [route]
-layers=-1,-11
+layers=-1,-9
 
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
@@ -888,24 +754,26 @@ activation=mish
 # NeckBottle Mix Module end
 
 
+
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 
+# fpn layer 78
 [upsample]
 stride=2
 
 [route] 
-layers=61,-1
+layers=49,-1
 
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
@@ -915,77 +783,62 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  module  x4
+# repeat  module  x3
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=160
+filters=128
 size=3
 stride=1
 pad=1
 activation=mish
-[convolutional]
-batch_normalize=1
-filters=160
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=160
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  module x4 end
-
+# repeat  module x3 end
 
 [route]
-layers=-1,-7
+layers=-1,-9
 
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
@@ -1023,19 +876,19 @@ layers=-3
 
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=2
 pad=1
 activation=mish
 
 [route]
-layers=-1, 142
+layers=-1, 119
 
-# NeckBottle Mix Module ：
+#   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
@@ -1045,76 +898,62 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  residual module  x4
+# repeat  residual module  x3
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=320
+filters=256
 size=3
 stride=1
 pad=1
 activation=mish
-[convolutional]
-batch_normalize=1
-filters=320
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=320
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x4 end
+# repeat  residual module x3 end
 
 [route]
-layers=-1,-7
+layers=-1,-9
 
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
@@ -1152,19 +991,19 @@ layers=-3
 
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=2
 pad=1
 activation=mish
 
 [route]
-layers=-1,126
+layers=-1,105
 
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
@@ -1174,76 +1013,62 @@ activation=mish
 layers=-2
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  residual module x4
+# repeat  residual module x3
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=640
+filters=512
 size=3
 stride=1
 pad=1
 activation=mish
-[convolutional]
-batch_normalize=1
-filters=640
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=640
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x4 end
+# repeat  residual module x3 end
 
 [route]
-layers=-1,-7
+layers=-1,-9
 
 [convolutional]
 batch_normalize=1
-filters=1280
+filters=1024
 size=1
 stride=1
 pad=1
