--- a/config/yolov5/cspp/yolov5s_cspp _NoID.cfg
+++ b/config/yolov5/cspp/yolov5s_cspp _NoID.cfg
@@ -300,6 +300,17 @@ stride=2
 pad=1
 activation=mish
 
+######################## CSPSPP ######################
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+
+[route]
+layers=-2
 [convolutional]
 batch_normalize=1
 filters=256
@@ -321,9 +332,11 @@ layers=-4
 [maxpool]
 stride=1
 size=13
+### END SPP ###
+
 [route]
-layers=-1,-3,-5,-6
-### End SPP ###
+layers=-1,-3,-5,-8
+
 [convolutional]
 batch_normalize=1
 filters=512
@@ -331,6 +344,7 @@ size=1
 stride=1
 pad=1
 activation=mish
+### End CSPSPP ###
 
 #   NeckBottle Mix Module ：
 # CSPBlock  layer  p-8
@@ -543,7 +557,7 @@ pad=1
 activation=mish
 
 [route]
-layers=-1, 67
+layers=-1, 69
 
 
 #   NeckBottle Mix Module ：
@@ -630,7 +644,7 @@ pad=1
 activation=mish
 
 [route]
-layers=-1,57
+layers=-1,59
 
 #   NeckBottle Mix Module ：
 [convolutional]
