--- a/config/yolov5/cspp/yolov5x_cspp_NoID.cfg
+++ b/config/yolov5/cspp/yolov5x_cspp_NoID.cfg
@@ -659,6 +659,17 @@ pad=1
 activation=mish
 
 
+######################## CSPSPP ######################
+[convolutional]
+batch_normalize=1
+filters=640
+size=1
+stride=1
+pad=1
+activation=mish
+
+[route]
+layers=-2
 [convolutional]
 batch_normalize=1
 filters=640
@@ -680,9 +691,11 @@ layers=-4
 [maxpool]
 stride=1
 size=13
+### END SPP ###
+
 [route]
-layers=-1,-3,-5,-6
-### End SPP ###
+layers=-1,-3,-5,-8
+
 [convolutional]
 batch_normalize=1
 filters=1280
@@ -690,6 +703,7 @@ size=1
 stride=1
 pad=1
 activation=mish
+### End CSPSPP ###
 
 
 # CSPBlock  layer
@@ -1030,7 +1044,7 @@ pad=1
 activation=mish
 
 [route]
-layers=-1, 142
+layers=-1, 144
 
 # NeckBottle Mix Module ：
 [convolutional]
@@ -1159,7 +1173,7 @@ pad=1
 activation=mish
 
 [route]
-layers=-1,126
+layers=-1,128
 
 #   NeckBottle Mix Module ：
 [convolutional]
