--- a/config/yolov5/ID/yolov5l_v4.cfg
+++ b/config/yolov5/ID/yolov5l_v4.cfg
@@ -5,32 +5,31 @@
 # Training
 batch=64
 subdivisions=8
-width=608
-height=608
+width=800
+height=800
 channels=3
 momentum=0.949
-# decay=0.001
 decay=0.0005
 angle=0.3
 saturation=1.5
 exposure=1.5
 hue=.1
 
-# learning_rate=0.00261
-learning_rate=0.001
+# learning_rate=0.001
+learning_rate=0.00261
 burn_in=1000
-max_batches=8000
+max_batches=30000
 policy=steps
-steps=4000,6000
+steps=15000,25000
 scales=.1,.1
 
 #cutmix=1
 mosaic=1
 
-# Focus learning # 0-P1/2
+# 0-P1/2
 [convolutional]
 batch_normalize=1
-filters=12
+filters=24
 groups=3
 size=3
 stride=2
@@ -38,51 +37,47 @@ pad=1
 activation=mish
 [convolutional]
 batch_normalize=1
-filters=32
-size=1
-#size=3    mAp + + 
+filters=64
+size=3
 stride=1
 pad=1
 activation=mish
 
-# Downsample  # 2-P2/4
+# Downsample  # 1-P2/4
 [convolutional]
 batch_normalize=1
-filters=64
+filters=128
 size=3
 stride=2
 pad=1
 activation=mish
 
-# CSPBlock layer  C3
+# CSPBlock layer  C3 x 1
 [convolutional]
 batch_normalize=1
-filters=32
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 
+# right
 [route]
-layers=-2
+layers=-1
+groups=2
+group_id=1
+
+# repeat  residual module  x3
 [convolutional]
 batch_normalize=1
-filters=32
+filters=64
 size=1
 stride=1
 pad=1
 activation=mish
-# repeat  residual module  x1
 [convolutional]
 batch_normalize=1
-filters=32
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=32
+filters=64
 size=3
 stride=1
 pad=1
@@ -90,14 +85,54 @@ activation=mish
 [shortcut]
 from=-3
 activation=linear
-# repeat  residual module x1 end
-
-[route]
-layers=-1,-6
-
 [convolutional]
 batch_normalize=1
 filters=64
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=64
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=64
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=64
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+# repeat  residual module x3 end
+
+# left
+[route]
+layers=-11
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
+
+[convolutional]
+batch_normalize=1
+filters=128
 size=1
 stride=1
 pad=1
@@ -107,7 +142,7 @@ activation=mish
 # Downsample  layer # 11-P3/8
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=3
 stride=2
 pad=1
@@ -117,181 +152,191 @@ activation=mish
 # CSPBlock  layer  p-8
 [convolutional]
 batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-[route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-# repeat  residual module  x1
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=64
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=64
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=64
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-# repeat  residual module x1 end
-
-[route]
-layers=-1,-12
-
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-
-# Downsample  #26-  P4/16
-[convolutional]
-batch_normalize=1
-filters=256
-size=3
-stride=2
-pad=1
-activation=mish
-
-# CSPBlock p-16
-# CSPBlock  layer  p-8
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-
-[route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-# repeat  residual module  x1
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=128
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=128
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=128
-size=3
-stride=1
-pad=1
-activation=mish
-[shortcut]
-from=-3
-activation=linear
-# repeat  residual module x1 end
-
-[route]
-layers=-1,-12
-
-[convolutional]
-batch_normalize=1
 filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 
+# right
+[route]
+layers=-1
+groups=2
+group_id=1
 
+# repeat  residual module  x9
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+# repeat  residual module x9 end
 
-# Downsample  # 41 - P5/32
+[route]
+layers=-29
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
+
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+
+# Downsample  # P4/16
 [convolutional]
 batch_normalize=1
 filters=512
@@ -300,9 +345,208 @@ stride=2
 pad=1
 activation=mish
 
+# CSPBlock
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+
+# right
+[route]
+layers=-1
+groups=2
+group_id=1
+
+# repeat  residual module  x9
 [convolutional]
 batch_normalize=1
 filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[shortcut]
+from=-3
+activation=linear
+# repeat  residual module x9 end
+
+# right
+[route]
+layers=-29
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+
+
+# Downsample  # P5/32
+[convolutional]
+batch_normalize=1
+filters=1024
+size=3
+stride=2
+pad=1
+activation=mish
+
+
+[convolutional]
+batch_normalize=1
+filters=512
 size=1
 stride=1
 pad=1
@@ -326,51 +570,29 @@ layers=-1,-3,-5,-6
 ### End SPP ###
 [convolutional]
 batch_normalize=1
-filters=512
+filters=1024
 size=1
 stride=1
 pad=1
 activation=mish
 
-#   NeckBottle Mix Module ：
-# CSPBlock  layer  p-8
+
+# CSPBlock  layer
 [convolutional]
 batch_normalize=1
-filters=256
+filters=1024
 size=1
 stride=1
 pad=1
 activation=mish
 
+# right
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=256
-size=1
-stride=1
-pad=1
-activation=mish
-# repeat  residual module  x1
-[convolutional]
-batch_normalize=1
-filters=256
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=256
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x1 end
+layers=-1
+groups=2
+group_id=1
 
-[route]
-layers=-1,-5
-
+# repeat   module  x1
 [convolutional]
 batch_normalize=1
 filters=512
@@ -378,7 +600,154 @@ size=1
 stride=1
 pad=1
 activation=mish
-#                                                                                              # backbone  Module end
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=mish
+# repeat   module x3 end
+
+#left
+[route]
+layers=-8
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
+
+[convolutional]
+batch_normalize=1
+filters=1024
+size=1
+stride=1
+pad=1
+activation=mish
+
+########################################################## backbone end at layer_id : 102
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+
+
+[upsample]
+stride=2
+
+[route] 
+layers= 82,-1
+
+#   NeckBottle Mix Module ：
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+
+[route]
+layers=-1
+groups=2
+group_id=1
+
+# repeat  residual module  x3
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+# repeat  residual module x3 end
+
+[route]
+layers=-8
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+# NeckBottle Mix Module end
+
+
 
 [convolutional]
 batch_normalize=1
@@ -388,31 +757,28 @@ stride=1
 pad=1
 activation=mish
 
+# fpn layer 78
 [upsample]
 stride=2
 
 [route] 
-layers= 40,-1
+layers=49,-1
 
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-# repeat  residual module  x1
+layers=-1
+groups=2
+group_id=1
+
+# repeat  module  x3
 [convolutional]
 batch_normalize=1
 filters=128
@@ -427,10 +793,43 @@ size=3
 stride=1
 pad=1
 activation=mish
-# repeat  residual module x1 end
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=128
+size=3
+stride=1
+pad=1
+activation=mish
+# repeat  module x3 end
 
 [route]
-layers=-1,-5
+layers=-8
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -439,70 +838,7 @@ size=1
 stride=1
 pad=1
 activation=mish
-# NeckBottle Mix Module end             
-
-
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-
-[upsample]
-stride=2
-
-[route] 
-layers=25,-1
-
-#   NeckBottle Mix Module ：
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-
-[route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-# repeat  residual module  x1
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=64
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x1 end
-
-[route]
-layers=-1,-5
-
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-# NeckBottle Mix Module end                  # eyed for mid 
-
+# NeckBottle Mix Module end
 
 
 ##########################
@@ -510,13 +846,12 @@ activation=mish
 size=1
 stride=1
 pad=1
-filters=21
+filters=255
 activation=linear
-# input : 840
 [yolo]
 mask=0,1,2
 anchors= 10,13, 16,30, 33,23, 30,61, 62,45, 59,119,116,90, 156,198, 373,326
-classes=2
+classes=80
 num=9
 jitter=.3
 ignore_thresh=.7
@@ -529,61 +864,37 @@ iou_loss=diou
 nms_kind=greedynms
 beta_nms=0.6
 # max_delta=5
-
+##########################
 
 [route]
 layers=-3
 
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=3
 stride=2
 pad=1
 activation=mish
 
 [route]
-layers=-1, 67
-
+layers=-1, 117
 
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=128
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-# repeat  residual module  x1
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=128
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x1 end
+layers=-1
+groups=2
+group_id=1
 
-[route]
-layers=-1,-5
-
+# repeat  residual module  x3
 [convolutional]
 batch_normalize=1
 filters=256
@@ -591,20 +902,72 @@ size=1
 stride=1
 pad=1
 activation=mish
-# NeckBottle Mix Module end                  # eyed for mid 
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=256
+size=3
+stride=1
+pad=1
+activation=mish
+# repeat  residual module x3 end
+
+[route]
+layers=-8
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
+
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+# NeckBottle Mix Module end
+
 
 ##########################
 [convolutional]
 size=1
 stride=1
 pad=1
-filters=21
+filters=255
 activation=linear
-# input : 840
 [yolo]
 mask=3,4,5
 anchors= 10,13, 16,30, 33,23, 30,61, 62,45, 59,119,116,90, 156,198, 373,326
-classes=2
+classes=80
 num=9
 jitter=.3
 ignore_thresh=.7
@@ -616,60 +979,38 @@ iou_normalizer=0.07
 iou_loss=diou
 nms_kind=greedynms
 beta_nms=0.6
-
+##########################
 
 
 [route]
 layers=-3
+
 [convolutional]
 batch_normalize=1
-filters=256
+filters=512
 size=3
 stride=2
 pad=1
 activation=mish
 
 [route]
-layers=-1,57
+layers=-1,103
 
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=256
+filters=1024
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=256
-size=1
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x1
-[convolutional]
-batch_normalize=1
-filters=256
-size=1
-stride=1
-pad=1
-activation=mish
-[convolutional]
-batch_normalize=1
-filters=256
-size=3
-stride=1
-pad=1
-activation=mish
-# repeat  residual module x1 end
+layers=-1
+groups=2
+group_id=1
 
-[route]
-layers=-1,-5
-
+# repeat  residual module x3
 [convolutional]
 batch_normalize=1
 filters=512
@@ -677,19 +1018,71 @@ size=1
 stride=1
 pad=1
 activation=mish
-# NeckBottle Mix Module end
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=1
+stride=1
+pad=1
+activation=mish
+[convolutional]
+batch_normalize=1
+filters=512
+size=3
+stride=1
+pad=1
+activation=mish
+# repeat  residual module x3 end
+
+[route]
+layers=-8
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
+
+[convolutional]
+batch_normalize=1
+filters=1024
+size=1
+stride=1
+pad=1
+activation=mish
+# NeckBottle Mix Module end layer
 
 ##########################
 [convolutional]
 size=1
 stride=1
 pad=1
-filters=21
+filters=255
 activation=linear
 [yolo]
 mask=6,7,8
 anchors=10,13, 16,30, 33,23, 30,61, 62,45, 59,119,116,90, 156,198, 373,326
-classes=2
+classes=80
 num=9
 jitter=.3
 ignore_thresh=.7
@@ -702,4 +1095,4 @@ iou_normalizer=0.07
 iou_loss=diou
 nms_kind=greedynms
 beta_nms=0.6
-# max_delta=5
+max_delta=5
