--- a/config/yolov5/ID/yolov5s_v4.cfg
+++ b/config/yolov5/ID/yolov5s_v4.cfg
@@ -40,7 +40,7 @@ activation=mish
 batch_normalize=1
 filters=32
 size=1
-#size=3    mAp + + 
+#size=3
 stride=1
 pad=1
 activation=mish
@@ -57,21 +57,17 @@ activation=mish
 # CSPBlock layer  C3
 [convolutional]
 batch_normalize=1
-filters=32
+filters=64
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=32
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x1
 [convolutional]
 batch_normalize=1
@@ -93,7 +89,12 @@ activation=linear
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-6
+layers=-5
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -117,20 +118,16 @@ activation=mish
 # CSPBlock  layer  p-8
 [convolutional]
 batch_normalize=1
-filters=64
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x1
 [convolutional]
 batch_normalize=1
@@ -186,7 +183,12 @@ activation=linear
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-12
+layers=-11
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -209,21 +211,16 @@ activation=mish
 # CSPBlock  layer  p-8
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
-
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x1
 [convolutional]
 batch_normalize=1
@@ -279,7 +276,12 @@ activation=linear
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-12
+layers=-11
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -336,21 +338,16 @@ activation=mish
 # CSPBlock  layer  p-8
 [convolutional]
 batch_normalize=1
-filters=256
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
-
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=256
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x1
 [convolutional]
 batch_normalize=1
@@ -369,7 +366,12 @@ activation=mish
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-5
+layers=-4
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -397,21 +399,17 @@ layers= 40,-1
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x1
 [convolutional]
 batch_normalize=1
@@ -430,7 +428,12 @@ activation=mish
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-5
+layers=-4
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -459,21 +462,17 @@ layers=25,-1
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=64
+filters=128
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=64
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x1
 [convolutional]
 batch_normalize=1
@@ -492,7 +491,12 @@ activation=mish
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-5
+layers=-4
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -549,21 +553,17 @@ layers=-1, 67
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=128
+filters=256
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=128
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module  x1
 [convolutional]
 batch_normalize=1
@@ -582,7 +582,12 @@ activation=mish
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-5
+layers=-4
+groups=2
+group_id=0
+
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
@@ -635,21 +640,17 @@ layers=-1,57
 #   NeckBottle Mix Module ：
 [convolutional]
 batch_normalize=1
-filters=256
+filters=512
 size=1
 stride=1
 pad=1
 activation=mish
 
 [route]
-layers=-2
-[convolutional]
-batch_normalize=1
-filters=256
-size=1
-stride=1
-pad=1
-activation=mish
+layers=-1
+groups=2
+group_id=1
+
 # repeat  residual module x1
 [convolutional]
 batch_normalize=1
@@ -668,7 +669,11 @@ activation=mish
 # repeat  residual module x1 end
 
 [route]
-layers=-1,-5
+layers=-4
+groups=2
+group_id=0
+[route]
+layers=-1,-2
 
 [convolutional]
 batch_normalize=1
